tests/valid/dot_path.m
a.b = x;
x = a.b;

%%%%%%%%%%

a.(b) = x;
x = a.(b);

%%%%%%%%%%

x = a.(b)();

%%%%%%%%%%

a.(b).(c) = x;
x = a.(b).(c);

%%%%%%%%%%

a.b();

%%%%%%%%%%

x = a().b;

%%%%%%%%%%

x = a().(b);

%%%%%%%%%%

x = a().b();
